bettterinvites fix spacing

--- a/css/bettterInvites.css
+++ b/css/bettterInvites.css
@@ -90,7 +90,7 @@
 
 .wrapper-1HIH0j .guildInfo-UCKhrV {
   justify-content: initial;
-  transform: translate(0, 75px);
+  transform: translate(0, 35px);
   width: 0
 }
 
